--- a/notebooks/Notebook-04-SequenceStructure.ipynb
+++ b/notebooks/Notebook-04-SequenceStructure.ipynb
@@ -751,8 +751,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d4fa8748-a961-4fab-9ccd-d334e7f68597",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "Console.WriteLine(\"Hello World!\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c75d9a3f-f454-44a2-9100-e5d529a48655",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87d80b08-7a64-4652-9016-b5598ce10fca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a0292f2-88e5-4a17-b84f-a7069c4dcd84",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "def6c1a7-9b81-490e-9122-490d5d0ef7d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03115f3c-1b89-4451-972d-fc1c40edd5dc",
    "metadata": {},
    "outputs": [],
    "source": []
